--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.6",
     "@react-native-community/masked-view": "^0.1.6",
     "expo": "~36.0.0",
     "react": "~16.9.0",
@@ -18,7 +19,8 @@
     "react-native-screens": "^2.0.0-alpha.32",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.0",
-    "react-navigation-stack": "^2.0.16"
+    "react-navigation-stack": "^2.0.16",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
