--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-stack": "^2.0.16",
     "react-navigation-tabs": "^2.7.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
